--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "discord.js": "^13.6.0"
   }
 }
