--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "discord.js": "^13.6.0"
+    "discord.js": "^13.6.0",
+    "webuntis": "^1.20.0"
   }
 }
