--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint src/"
   },
   "devDependencies": {
+    "@types/hafas-client": "^5.22.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.8.0",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "discord.js": "^13.6.0",
+    "hafas-client": "^5.23.0",
     "webuntis": "^1.20.0"
   }
 }
